--- a/ModelMedium.ipynb
+++ b/ModelMedium.ipynb
@@ -1022,18 +1022,13 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Fk9hrp7VwJAf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "## Referência\n"
+        "## Referência\n",
+        "\n",
+        "*  https://scikit-learn.org/0.21/_downloads/scikit-learn-docs.pdf\n",
+        "*  Regresión lineal con Python by Joaquín Amat Rodrigo, available under a Attribution 4.0 International (CC BY 4.0) at https://www.cienciadedatos.net/documentos/py10-regresion-lineal-python.html\n",
+        "*  https://medium.com/@johanrenzosm/meu-primeiro-post-construindo-um-modelo-de-regress%C3%A3o-linear-simples-e75d71114606"
       ],
       "metadata": {
         "id": "t7EKEtxfuLFu"
