--- a/ModelMedium.ipynb
+++ b/ModelMedium.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "8K-3Mq1mYO_b"
       },
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "WtYkcaNVYbm2"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
         "id": "GcFE501XY2q0",
         "outputId": "2c0bcde0-757a-4a0a-e1da-b9569d286f4a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -250,7 +250,7 @@
         "id": "cwXMLoWqY9Ik",
         "outputId": "30fd3b3f-3953-4a7f-b372-d3b9eb48858c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,7 +278,7 @@
         "id": "DlywZeRxZCcd",
         "outputId": "1720e0f3-865f-404d-846a-98529b8ad4ee"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +307,7 @@
       "metadata": {
         "id": "63MocgJPhatc"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +325,7 @@
         "id": "LkEHqpNIZJ6r",
         "outputId": "a52e67c3-92ca-43cc-db4b-8c4bc6585f9f"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +509,7 @@
         "id": "CBTMYnFGaIEu",
         "outputId": "a8b21f11-6635-48c2-9e9c-c445dc87d555"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -543,7 +543,7 @@
       "metadata": {
         "id": "wuNvX7nAdG6J"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -557,7 +557,7 @@
       "metadata": {
         "id": "zzqZvYlcdc7Y"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -585,7 +585,7 @@
         "id": "Vf_J7qH4cHaQ",
         "outputId": "5332225b-5387-4387-b481-ba07a5f3397d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,7 +624,7 @@
         },
         "outputId": "95175ad0-3dba-4e39-a0af-455850b44b91"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -852,7 +852,7 @@
         "id": "6Pg7R5fOrpwQ",
         "outputId": "56a79a59-dc92-4d44-925e-138b7f0dffc7"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -891,7 +891,7 @@
         "id": "6gwrTUlNoRa_",
         "outputId": "3d41de75-5c58-4c31-9023-cae66d8490fc"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -933,7 +933,7 @@
         "id": "q8M_BEe7iR9w",
         "outputId": "4335530b-d895-4ad8-ed3c-ac242faaf05d"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -985,7 +985,7 @@
         "id": "V5v9xtXXmYNT",
         "outputId": "1bce11d8-91f6-422f-f343-202dd9756dd5"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1007,7 +1007,7 @@
         "    *   Podemos visualizar que a distribução dos residuos aprenseta uma distrubução normal.\n",
         "    *  Podemos observar que o residuo obtido está igualmente distribuido ao longo da linha y=0.\n",
         "*  Os pontos anteriormentes comentados são boms indicadores de que nosso modelo está predizendo razoavelmente bem.\n",
-        "* Nosso modelo tem a seguiente equação :\n",
+        "* Nosso modelo tem a seguinte equação :\n",
         "\n",
         "\\begin{equation}\n",
         "\\fbox{$y = 0.99 × x -0.09$}\n",
